# SubmodularStreamingMaximization

./: .gitignore  .gitmodules  CMakeLists.txt  Readme.md  Readme.rst  environment.yml  environmnet.yml  explore_results.ipynb  setup.py
.github/workflows/: generate_docs.yml  test_and_docs.yml  test_cpp.yml  test_python.yml
docs/: Doxyfile  Doxyfile.bak  conf.py  index.rst
docs/api/: classMatrix.rst  classPyKernel.rst  classRandom.rst  classSalsa.rst  classSalsa_1_1Dense.rst  classSalsa_1_1HighLowThreshold.rst  classSieveStreaming.rst  classSubmodularFunctionWrapper.rst  class_view_hierarchy.rst  dir_include.rst  dir_include_functions.rst  dir_include_functions_kernels.rst  file_include_DataTypeHandling.h.rst  file_include_Greedy.h.rst  file_include_Python.cpp.rst  file_include_Random.h.rst  file_include_SieveStreaming.h.rst  file_include_SieveStreamingPP.h.rst  file_include_SubmodularFunction.h.rst  file_include_functions_IVM.h.rst  file_include_functions_kernels_Kernel.h.rst  file_view_hierarchy.rst  function_Matrix_8h_1a38ada3e60db87205c68a8cd27bb53754.rst  program_listing_file_include_Greedy.h.rst  program_listing_file_include_IndependentSetImprovement.h.rst  program_listing_file_include_Python.cpp.rst  program_listing_file_include_Salsa.h.rst  program_listing_file_include_SieveStreaming.h.rst  program_listing_file_include_SieveStreamingPP.h.rst  program_listing_file_include_SubmodularOptimizer.h.rst  program_listing_file_include_ThreeSieves.h.rst  program_listing_file_include_functions_FastIVM.h.rst  program_listing_file_include_functions_IVM.h.rst  program_listing_file_include_functions_Matrix.h.rst  program_listing_file_include_functions_kernels_RBFKernel.h.rst  typedef_DataTypeHandling_8h_1aebd6d4f4d1878f967fc3873d39646e74.rst  unabridged_api.rst
docs/html/: .buildinfo  cpp.html  genindex.html  index.html  objects.inv  python.html  root.html  search.html  searchindex.js
docs/html/_sources/: cpp.rst.txt  index.rst.txt  python.rst.txt  root.rst.txt
docs/html/_sources/api/: classFastIVM.rst.txt  classGreedy.rst.txt  classIVM.rst.txt  classIndependentSetImprovement.rst.txt  classKernel.rst.txt  classKernelWrapper.rst.txt  classPySubmodularFunction.rst.txt  classRBFKernel.rst.txt  classSalsa_1_1FixedThreshold.rst.txt  classSieveStreamingPP.rst.txt  classSieveStreamingPP_1_1Sieve.rst.txt  classSieveStreaming_1_1Sieve.rst.txt  classSubmodularFunction.rst.txt  classSubmodularOptimizer.rst.txt  classThreeSieves.rst.txt  class_view_hierarchy.rst.txt  file_include_IndependentSetImprovement.h.rst.txt  file_include_Salsa.h.rst.txt  file_view_hierarchy.rst.txt  (+25 more)
docs/html/api/: classFastIVM.html  classGreedy.html  classIVM.html  classIndependentSetImprovement.html  classKernel.html  classKernelWrapper.html  classMatrix.html  classPyKernel.html  classPySubmodularFunction.html  classRBFKernel.html  classRandom.html  classSalsa.html  classSalsa_1_1Dense.html  classSalsa_1_1FixedThreshold.html  classSalsa_1_1HighLowThreshold.html  classSieveStreaming.html  classSieveStreamingPP.html  classSieveStreamingPP_1_1Sieve.html  classSieveStreaming_1_1Sieve.html  classSubmodularFunction.html  classSubmodularFunctionWrapper.html  classSubmodularOptimizer.html  classThreeSieves.html  class_view_hierarchy.html  dir_include.html  dir_include_functions.html  dir_include_functions_kernels.html  file_include_DataTypeHandling.h.html  file_include_Greedy.h.html  file_include_IndependentSetImprovement.h.html  file_include_Python.cpp.html  file_include_Random.h.html  file_include_Salsa.h.html  file_include_SieveStreaming.h.html  file_include_SieveStreamingPP.h.html  file_include_SubmodularFunction.h.html  file_include_SubmodularOptimizer.h.html  file_include_ThreeSieves.h.html  file_include_functions_FastIVM.h.html  file_include_functions_IVM.h.html  (+35 more)
experiments/abc/: init.py  init.sh  run.py
experiments/creditfraud/: init.sh  run.py
experiments/examiner/: init.py  init.sh  run.py
experiments/fact-highlevel/: init.py  run.py
experiments/fact-lowlevel/: init.sh  run.py
experiments/forestcover/: init.sh  run.py
experiments/kddcup99/: init.sh  run.cpp  run.py
experiments/stream51/: init.py  init.sh  run.py
include/: DataTypeHandling.h  Greedy.h  IndependentSetImprovement.h  Python.cpp  Random.h  Salsa.h  SetImprovement.h  SieveStreaming.h  SieveStreamingPP.h  SubmodularFunction.h  SubmodularOptimizer.h  ThreeSieves.h
include/functions/: FastIVM.h  IVM.h  Matrix.h
include/functions/kernels/: Kernel.h  RBFKernel.h
include/kernels/: RBFKernel.h
tests/: main.cpp  main.py
